force-app/main/default/objects/SVMXA360__ServiceContractPlan__c/SVMXA360__ServiceContractPlan__c.object-meta.xml
<CustomObject>
    <description>This object stores the plans/templates to author Service Contract.</description>
    <label>Service Contract Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Contract Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>