force-app/main/default/objects/SVMXA360__ServiceContractPlan__c/fields/SVMXA360__ContractTermDuration__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractTermDuration__c</fullName>
    <description>The duration of the template in number.</description>
    <label>Contract Term Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>