force-app/main/default/objects/SVMXA360__ServiceContractPlan__c/fields/SVMXA360__ContractTermUnitOfTime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractTermUnitOfTime__c</fullName>
    <description>The duration of the plan.</description>
    <label>Contract Term Unit of Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__UnitOfTime</valueSetName>
    </valueSet>
</CustomField>