force-app/main/default/objects/SVMXA360__ServiceContractPlan__c/fields/SVMXA360__Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Description__c</fullName>
    <description>This field is to provide description for the plans.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>