force-app/main/default/objects/SVMXA360__ServiceContractPlan__c/fields/SVMXA360__IsActive__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the plan is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>