force-app/main/default/objects/SVMXA360__ServiceContractPlan__c/fields/SVMXA360__PriceBookId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PriceBookId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Price book which would be used in Contracts while authoring.</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Service Contract Plans</relationshipLabel>
    <relationshipName>Service_Contract_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>