force-app/main/default/objects/SVMXA360__ServiceContractPlan__c/fields/SVMXA360__ServicePlanProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServicePlanProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the Product lookup to associate one to one relation between Service Plan and Product.</description>
    <label>Service Plan Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Contract Plans</relationshipLabel>
    <relationshipName>Service_Contract_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>