force-app/main/default/objects/SVMXA360__ServiceContractPlan__c/fields/SVMXA360__SpecialTerms__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SpecialTerms__c</fullName>
    <description>The value in this field would be used to copy to the same field in Service Contract during authoring.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>