force-app/main/default/objects/SVMXA360__ServiceContractPlan__c/listViews/SVMXA360__AllServiceContractPlans.listView-meta.xml
<ListView>
    <fullName>SVMXA360__AllServiceContractPlans</fullName>
    <columns>NAME</columns>
    <columns>SVMXA360__Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>SVMXA360__IsActive__c</columns>
    <columns>SVMXA360__ContractTermDuration__c</columns>
    <columns>SVMXA360__ContractTermUnitOfTime__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>A360 - All Service Contract Plans</label>
</ListView>